# bittens-adventure

./: .gitignore  404.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Cargo.toml  GOALS.md  IDEAS.md  LICENSE  Makefile  Makefile.Android  README.md  bin  bitten.js  bitten.rc  bitten.wasm  bittens-adventure.js  bittens-adventure.sublime-workspace  bittens-adventure.wasm  game.js  icon.rc  index.html  md.README  minshell.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-ubuntu.yml  build-web.yml  build.yml  codeql-analysis.yml  test-build.yml
assets/: README.md  chest_tmp.aseprite  zone_enter.aseprite
assets/map/: bit_test.tmx
assets/maps/: bit_horiblegrass.tsx  bit_maps.tsx  bit_test.tmx  bit_tileset_test.tsx  bit_towntest.tmx
dll/: README.md
easter-egg/: index.html
include/emuscripten/libxml2/libxml/: xmlversion.h
include/libxml2/libxml/: xmlversion.h
include/rust/: bit_save.h
lib/: libtmx.a.bak
lib/emuscripten/cmake/libxml2/: libxml2-config.cmake
lib/emuscripten/cmake/tmx/: tmxConfig.cmake  tmxExports-release.cmake  tmxExports.cmake
lib/emuscripten/pkgconfig/: libxml-2.0.pc
lib/linux64/pkgconfig/: libxml-2.0.pc
lib/win64/cmake/tmx/: tmxConfig.cmake  tmxExports.cmake
rust-src/: Cargo.toml  build.rs
rust-src/src/: bittenSave.rs  bittenTest.rs  bittendef.rs  lib.rs
src/: CMakeLists.txt  Makefile  README.md  b_battle.c  b_battle.h  b_main.c  bit_battle.c  bit_battle.h  bit_cmdlineParams.c  bit_cmdlineParams.h  bit_collision.c  bit_collision.h  bit_diag.c  bit_diag.h  bit_file.c  bit_loadfile.c  bit_loadfile.h  bit_patch.c  bit_patch.h  bit_tmxload.c  bittendef.h  compile.sh  defaultSave.h  discord.h  dll_testing.c  e_collision.c  e_collision.h  e_entity.h  e_player.h  f_save.c  f_save.h  g_game.c  g_game.h  i_event.c  i_event.h  main.c  main.cpp  p_player.c  p_player.h  pointers.c  (+8 more)
