[package]
name = "rust-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savefile="0.11"
savefile-derive="0.11"

[lib]
name = "bitsav"
path = "src/bittenSave.rs"
# crate-type = ["cdylib"]      # Creates dynamic lib
crate-type = ["staticlib"] # Creates static lib
